--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,22 +1,15 @@
-.App {
-  text-align: center;
+.logo {
+  height: 25vmin;
 }
 
-.App-logo {
-  height: 40vmin;
-}
+.ant-form {
+  min-width: 300px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  .ant-form-item-control {
+    line-height: 1.5;
+  }
 
-.App-link {
-  color: #09d3ac;
+  .ant-form-explain {
+    font-size: 13px;
+  }
 }
