--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,6 +10,13 @@
   }
 }
 
+.dynamic-delete-button {
+  color: $darkgreen;
+}
+
+
+// ANTD
+
 .ant-empty-description {
   color: $gray;
 }
@@ -80,7 +87,9 @@
 }
 
 .ant-form {
-  width: 30vmin;
+  &.auth {
+    width: 30vmin;
+  }
 
   .ant-form-item-control {
     line-height: 1.5;
