updated test popup component

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -21,6 +21,18 @@
   color: $gray;
 }
 
+.ant-switch {
+  background-color: $gray;
+
+  &.ant-switch-checked {
+    background-color: $darkgreen;
+  }
+
+  .ant-switch-inner {
+    color: $darkgray;
+  }
+}
+
 .ant-card {
   .action-description {
     display: flex;
