--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,8 +1,9 @@
 $black: #000000;
 $white: #FFFFFF;
-$dark: #282c34;
-$darkgreen: #1DA57A;
 $gray: #828282;
+$dark: #282c34;
 $darkgray: #202228;
+$blackgray: #16171b;
+$darkgreen: #1DA57A;
 $darkred: #8b0000;
 $darkyellow: #9b870c;
