implemented graph method

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -110,6 +110,9 @@
 .capitalize {
   text-transform: capitalize;
 }
+.cur-p {
+  cursor: pointer;
+}
 .abs-center,
 .abs-centerd {
   position: absolute;
